--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.DS_Store
 Dropio.Core/bin/[^.]*
 Dropio.Core/obj/[^.]*
 Dropio.Core/Dropio.Core.suo
+Dropio.Core/Dropio.Core.userprefs
+Dropio.Core/Dropio.Core.pidb
