--- a/Dropio.Core/Dropio.Core.csproj
+++ b/Dropio.Core/Dropio.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ServiceAdapter.cs" />
     <Compile Include="ServiceException.cs" />
     <Compile Include="ServiceProxy.cs" />
+    <Compile Include="Subscription.cs" />
     <Compile Include="Types\Audio.cs" />
     <Compile Include="Types\Document.cs" />
     <Compile Include="Types\Image.cs" />
