--- a/Dropio.Core/Dropio.Core.csproj
+++ b/Dropio.Core/Dropio.Core.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asset.cs" />
